--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afspawnservice",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "This is an Angular service that allows you to spawn components on-the-fly, with a service call. For more details, watch my talk here: https://www.youtube.com/watch?v=-Hy-i4q8Vtg&t=38s",
   "main": "main.js",
   "author": "Frosty <aaron@frosty.io>",
@@ -17,6 +17,9 @@
   "directories":{
     "type": "git",
     "url": "git@github.com:aaronfrost/AFSpawnService.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aaronfrost/AFSpawnService/issues"
   },
   "dependencies": {
     "@angular/animations": "^4.1.3",
