--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afspawnservice",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "This is an Angular service that allows you to spawn components on-the-fly, with a service call. For more details, watch my talk here: https://www.youtube.com/watch?v=-Hy-i4q8Vtg&t=38s",
   "main": "main.js",
   "author": "Frosty <aaron@frosty.io>",
@@ -14,7 +14,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "directories":{
+  "repository":{
     "type": "git",
     "url": "git@github.com:aaronfrost/AFSpawnService.git"
   },
